# truck-playground

./: .gitignore  Cargo.toml  cube.step
src/: app.rs  lib.rs  main.rs
src/geometry/: mod.rs
src/renderer/: camera.rs  mesh.rs  mod.rs  shader.wgsl
src/sketch/: builder.rs  constants.rs  error.rs  loop2d.rs  mod.rs  plane.rs  shapes.rs  topology.rs
src/sketch/primitives/: arc2d.rs  bspline.rs  bspline2d.rs  circle2d.rs  line2d.rs  mod.rs  traits.rs
