[package]
name = "truck-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# CAD kernel
truck-modeling = "0.6.0"
truck-meshalgo = "0.4.0"
truck-stepio = "0.3.0"
truck-geometry = "0.5.0"

# Error handling
thiserror = "1.0"

# GUI
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.31"

# Logging
log = "0.4"
env_logger = "0.11"
glam = "0.31.0"
bytemuck = { version = "1", features = ["derive"] }
